--- a/templates/base.html
+++ b/templates/base.html
@@ -47,11 +47,12 @@
         position: absolute;
         top: 0;
         left: 0;
-        width: 100vw;
+        width:100%;
         z-index: -999;
     }
     .background img{
-        width: 100%;
+      width:100vw;
+      height:100vh;
     }
     .img-responsive {
         margin: 0 auto;
