--- a/templates/rules.html
+++ b/templates/rules.html
@@ -20,9 +20,7 @@
         color: var(--white);
     }
     .li-link:hover{
-        color: yellow;
-        text-decoration: none;
-        font-size: 3rem;
+        color: white;
     }
 </style>
 <div class="col-md-12">
@@ -32,10 +30,10 @@
     <hr>
         <ul type="dot" class="guidelines">
             <li>
-                The <strong>Hunt</strong> will begin on 29<sup>th</sup> December, 2021 6 PM.
+                The <strong>Hunt</strong> will begin on 24<sup>th</sup> February, 2022 18:00.
             </li>
             <li>
-                The username for registration should be of the following format <strong>rollNo_name</strong>. <br>Eg: 20bcs102_deepak.
+                The username for registration should be of the following format <strong>rollNo_name</strong>. <br>Eg: 21bma003_mehul.
             </li>
             <li>
                 Use the institute email address for registration.
@@ -50,7 +48,7 @@
                 For any queries: <a href="https://wa.me/918894957166" target="_blank" class="li-link">8894957166</a> </li>
 
             <li>
-                Please read the storyline and questions very carefully.
+                Please read the question very carefully. 
             </li>
         </ul>
     </div>
