--- a/templates/base.html
+++ b/templates/base.html
@@ -51,7 +51,7 @@
         z-index: -999;
     }
     .background img{
-      posiition:fixed;
+      position:fixed;
       width:100vw;
       height:100vh;
     }
