--- a/templates/register.html
+++ b/templates/register.html
@@ -19,15 +19,12 @@
         <h2>Register</h2>
         <hr>
         <form method="POST" action="" class="register"> {% csrf_token %} {{form|crispy}}
-            <input type="submit" value="submit" name="" class="btn btn-primary next_question_btn">
+            <input type="submit" value="submit" name="" class="btn btn-primary btn-lg next_question_btn">
         </form>
     </div>
 
 </section>
 <hr>
-<form method="POST" action="" class="register"> {% csrf_token %} {{form|crispy}}
-    <input type="submit" value="submit" name="" class="btn btn-primary btn-lg "next_question_btn">
-</form>
 {%endblock%}
 
 
