--- a/templates/user/password_reset.html
+++ b/templates/user/password_reset.html
@@ -11,8 +11,8 @@
 <div class="background-blur">
 <h2>Password Reset Form</h2>
   <br>
-<form method='post' class="register"> {% csrf_token %} {{ form|crispy }}
-  <button type="submit" class="btn btn-primary next_question_btn">Reset Password</button>
+<form method='post' > {% csrf_token %} {{ form|crispy }}
+  <button type="submit" class="btn btn-primary btn-lg next_question_btn" >Reset Password</button>
 </form>
 </div>
 {%endblock%}
