--- a/templates/rules.html
+++ b/templates/rules.html
@@ -30,11 +30,11 @@
     <hr>
         <ul type="dot" class="guidelines">
             <li>
-                The <strong>Hunt</strong> will begin on 24<sup>th</sup> February, 2022 18:00.
+                The <strong>Hunt</strong> will begin on 24<sup>th</sup> February, 2022 20:00.
             </li>
-            <li>
-                The username for registration should be of the following format <strong>rollNo_name</strong>. <br>Eg: 21bma003_mehul.
-            </li>
+            <!-- <li> -->
+            <!--     The username for registration should be of the following format <strong>rollNo_name</strong>. <br>Eg: 21bma003_mehul. -->
+            <!-- </li> -->
             <li>
                 Use the institute email address for registration.
             </li>
