change color of register

--- a/templates/register.html
+++ b/templates/register.html
@@ -49,7 +49,7 @@
                   {{form.password2|as_crispy_field}}
             </div>
                 
-            <input type="submit" value="submit" name="" class="btn btn-primary btn-lg ">
+            <input type="submit" value="submit" name="" class="btn btn-primary btn-lg " style="background-color: var(--green);border:0;">
         </form>
     </div>
 <hr>
