--- a/templates/home.html
+++ b/templates/home.html
@@ -18,6 +18,13 @@
         padding: 10px;
         box-shadow: 0 10px 20px rgba(0, 0, 0, 0.30), 0 10px 20px rgba(0, 0, 0, 0.30);
     }
+    .link{
+        color: white;
+    }
+    .link:hover{
+        color: white;
+        text-decoration: underline;
+    }
 </style>
 <div class="container">
     <div class="home">
@@ -30,7 +37,7 @@
         <div class="content">
             <ul type="dot" class="guidelines">
                 <li>
-                    Use of desktop/laptop is recommended.
+                    Use of desktop/laptop is highly recommended.
                 </li>
                 <li>
                     The levels vary in degree of difficulty.
@@ -44,13 +51,13 @@
                 <li>
                     Carefully follow the rules and regulations.
                 </li>
+                <!-- <li>
+                    Please read the questions and hints very carefully.
+                </li> -->
                 <li>
-                    Please read the storyline and questions very carefully.
-                </li>
+                    For any queries: <a href="https://wa.me/918894957166" target="_blank" style="font-size:2.2rem;" class="link">8894957166</a> (WhatsApp) </li>
                 <li>
-                    For any queries: <a href="https://wa.me/918894957166" target="_blank" style="font-size:2.2rem;" class="general-links">8894957166</a> </li>
-                <li>
-                    Start playing <a href="/hunt/" class="general-links"><strong>Abhedya</strong>.</a>
+                    Start playing <a href="/hunt/" class="link"><strong>Abhedya</strong>.</a>
                 </li>
             </ul>
         </div>
