--- a/templates/level.html
+++ b/templates/level.html
@@ -1,14 +1,15 @@
-{% extends "base.html" %} {% block title %} Abhedya - level {{level.level_id}} {% endblock %} {% block content %} {% load crispy_forms_tags %} {% if cleared %}
-<div class="col-md-12" style="text-align: center;">
-    <h2 style="color: var(--green);text-align:center"> Finally The Mystery is Solved 🕵️! </h2>
+{% extends "base.html" %}
+{% block title %} Abhedya - level {{level.level_id}} {% endblock %} {% block content %} {% load crispy_forms_tags %} {% if cleared %}
+<div class="col-md-12 card" style="text-align: center;">
+    <h2 style="color: var(--green);text-align:center"> The Final Problem 🕵️! </h2>
     <hr>
     <p class="rules" style="font-size:20px;text-align:center;">
-        Robert reveals to you that you have multiple personality disorder. Blackrose is your (Brandon's) evil alter ego.
+        You are here already? We didn't expect you to reach this far. Hope you had fun. Here is the final chain of mysteries. Solve them if you can. Else Abhedya (the 'impenetrable') will stay Abhedya.
     </p>
     <p>
-        <a href="https://bit.ly/3FBEmLf" style="color: #fff; font-size:20px">bit.ly/3FBEmLf</a>
+        <a href="https://bit.ly/3LNBoGT" style="color: #fff; font-size:20px" target="_blank">bit.ly/3LNBoGT</a>
     </p>
-    <img src="https://media.istockphoto.com/vectors/case-closed-grunge-stamp-vector-id1150223049?k=20&m=1150223049&s=612x612&w=0&h=GEgtixLV-eGMWu9cYmQchxQ2hnWxpKBbSrtYeG31HU0=" alt="" class="complete">
+    <img src="http://picmelon.com/wp-content/uploads/2017/02/picmelon-free-stock-photo-2991-1024x576.jpeg" alt="" class="complete" style="margin: auto;transform:scale(1.3);opacity:0.6;">
 </div>
 {% else %}
 <div class="card">
