--- a/templates/rules.html
+++ b/templates/rules.html
@@ -32,24 +32,23 @@
             <li>
                 The <strong>Hunt</strong> will begin on 24<sup>th</sup> February, 2022 20:00.
             </li>
+            <li>
+                The only rule of this hunt is that there are NO rules. Play fair or play foul, do anything to win by hook or crook. Yes, we know that’s the fun of playing.
+            </li>
             <!-- <li> -->
             <!--     The username for registration should be of the following format <strong>rollNo_name</strong>. <br>Eg: 21bma003_mehul. -->
             <!-- </li> -->
-            <li>
+            <!-- <li>
                 Use the institute email address for registration.
-            </li>
+            </li> -->
             <li>
-                <strong>CAPS and Space</strong> are not allowed. E.g. If your answer is "Hello World", enter "helloworld" to proceed to the next level.
+                <strong>CAPS and Spaces are not allowed</strong>. E.g. If your answer is "<strong>Hello World</strong>", enter "<strong>helloworld</strong>" to proceed to the next level.
             </li>
             <li>
                 The winners will be the ones who finish at the earliest.
             </li>
             <li>
-                For any queries: <a href="https://wa.me/918894957166" target="_blank" class="li-link">8894957166</a> </li>
-
-            <li>
-                Please read the question very carefully. 
-            </li>
+                For any queries: <a href="https://wa.me/918894957166" target="_blank" class="li-link">8894957166</a> (WhatsApp)</li>
         </ul>
     </div>
 </section>
