--- a/templates/login.html
+++ b/templates/login.html
@@ -38,7 +38,9 @@
         <button type="submit" class="btn btn-primary next_question_btn">Login</button>
     </form>
     <p style="padding-top: 10px; color: #efefef">Don't have any account?<a href="/register/" class="link"> Register </a> </p>
-    <p style="padding-top: 10px; color: #efefef">Forgot Password?  <a href="{% url 'password_reset' %}" class="link">Click Here</a> </p>
+    <p style="padding-top: 10px; color: #efefef">Forgot Password?  <a href="istenith.com" class="link">Contact us</a> </p>
+    <!-- <p style="padding-top: 10px; color: #efefef">Forgot Password?  <a href="" class="link">Click Here</a> </p> -->
+
     </div>
 </section>
     {%endblock%}
