--- a/templates/leaderboard.html
+++ b/templates/leaderboard.html
@@ -27,7 +27,7 @@
 <div class="col-md-12">
     {% if active %}
     <center>
-        <div style="color: var(--green);font-size: 4vh;">
+        <div style="color:#fff;font-size: 4vh;">
             THE GAME IS ON!
         </div>
     </center>
